// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Queries should delete a single query 1`] = `
Array [
  Object {
    "color": "default",
    "id": "test-id-2",
    "name": "test-query-2",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
  Object {
    "color": "default",
    "id": "test-id-3",
    "name": "test-query-3",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
]
`;

exports[`Queries should get a single query 1`] = `
Object {
  "color": "default",
  "id": "test-id-3",
  "name": "test-query-3",
  "query": "SELECT * FROM users",
  "type": "sqlite",
}
`;

exports[`Queries should get all queries 1`] = `
Array [
  Object {
    "color": "default",
    "id": "test-id-1",
    "name": "test-query-1",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
  Object {
    "color": "default",
    "id": "test-id-2",
    "name": "test-query-2",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
  Object {
    "color": "default",
    "id": "test-id-3",
    "name": "test-query-3",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
]
`;

exports[`Queries should perform basic validation 1`] = `"Failed validation: [{\\"message\\":\\"\\\\\\"id\\\\\\" must be a string\\",\\"fieldName\\":\\"id\\"},{\\"message\\":\\"\\\\\\"name\\\\\\" is required\\",\\"fieldName\\":\\"name\\"},{\\"message\\":\\"\\\\\\"query\\\\\\" is required\\",\\"fieldName\\":\\"query\\"}]"`;

exports[`Queries should perform basic validation 2`] = `"Failed validation: [{\\"message\\":\\"\\\\\\"id\\\\\\" must be a string\\",\\"fieldName\\":\\"id\\"},{\\"message\\":\\"\\\\\\"name\\\\\\" is required\\",\\"fieldName\\":\\"name\\"},{\\"message\\":\\"\\\\\\"query\\\\\\" is required\\",\\"fieldName\\":\\"query\\"}]"`;

exports[`Queries should perform basic validation 3`] = `"Failed validation: [{\\"message\\":\\"\\\\\\"name\\\\\\" is required\\",\\"fieldName\\":\\"name\\"},{\\"message\\":\\"\\\\\\"query\\\\\\" is required\\",\\"fieldName\\":\\"query\\"}]"`;

exports[`Queries should perform basic validation 4`] = `"Failed validation: [{\\"message\\":\\"\\\\\\"query\\\\\\" is required\\",\\"fieldName\\":\\"query\\"}]"`;

exports[`Queries should perform basic validation 5`] = `"Failed validation: [{\\"message\\":\\"\\\\\\"query\\\\\\" is required\\",\\"fieldName\\":\\"query\\"}]"`;

exports[`Queries should update a single query 1`] = `
Array [
  Object {
    "color": "default",
    "id": "test-id-1",
    "name": "test-query-1",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
  Object {
    "color": "default",
    "id": "test-id-2",
    "name": "test-query-2",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
  Object {
    "color": "default",
    "id": "test-id-3",
    "name": "test-query-3",
    "query": "SELECT * FROM users",
    "type": "sqlite",
  },
]
`;
